fixed image overflowing

--- a/zip/static/style.css
+++ b/zip/static/style.css
@@ -110,6 +110,13 @@ pre {
   color: rgb(0, 0, 0);
 }
 
+div.section img {
+  width:100%;
+  /* height:100%; */
+
+  object-fit: contain;
+}
+
 hr{
     margin-left:0;
     left: 0px;
